src/objects/CE_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Default_Time_Period__c</fullName>
        <description>The default duration in days for a particular activity phase.</description>
        <label>Default Time Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_In_Initial_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether milestone dates will be populated by publishers during initial setup.</description>
        <label>Display In Initial Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Step_Number__c</columns>
        <columns>Default_Time_Period__c</columns>
        <columns>Display_In_Initial_Setup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>